fixed alignments and added font styles

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
 	text-decoration: none;
 	color: inherit;
 	scroll-behavior: smooth;
-	font-family: Garamond;
+	font-family: 'Raleway', sans-serif;
 }
 
 html, body {
@@ -44,11 +44,12 @@ html, body {
 	height: 100px;
 	text-align: right;
 	line-height: 100px;
-	padding-right: 20px;
+	padding: 20px 20px 20px 0px;
 }
 
 .nav-head h1{
-	font-size: 25px;
+	font-size: 30px;
+	font-weight: 900;
 }
 
 .nav-element {
@@ -63,7 +64,7 @@ html, body {
 	text-align: right;
 	flex-grow: 1;
 	font-size: 1.2rem;
-	
+	font-weight: 400;
 }
 
 .nav-element a {
@@ -83,11 +84,33 @@ html, body {
 #intro {
 	background-image: url('/images/intro_wallpaper.jpg');
 	height: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+}
+
+.name {
+	color: rgb(0, 132, 255);
+	font-size: inherit;
+}
+
+#intro p {
+	flex-basis: 100%;
+	font-size: 1.6em;
+	font-weight: bold;
 }
 
 .container-header {
 	font-size: 2rem;
-	padding: 5% 0px;
+	padding: 3% 0px;
+	font-weight: 900;
+}
+
+.container-header-underline {
+	border-bottom: 6px solid #333;
+	padding-top: 1%;
+	width: 80px;
+	margin: auto;
 }
 
 .container {
@@ -104,19 +127,22 @@ html, body {
 
 .portfolio-items {
 	text-align: center;
-	margin: 10px;
+	display: inline-block;
+	background-color: white;
+	height: 200px;
+	width: 300px;
 }
 
 .portfolio-items img {
-	max-height: 200px;
-	max-width: 100%;
-}
-
-.portfolio-items h2{
-	border-top: 1px solid rgb(190, 190, 190);
+	height: 170px;
+	width: 300px;
 }
 
 /*About*/
+
+#about {
+	background-color: rgb(243, 243, 243);	
+}
 
 .about-language-container {
 	display: flex;
@@ -132,6 +158,23 @@ html, body {
 	list-style-type: none;
 }
 
+.about-items img {
+	max-width: 100%;
+	height: auto;
+}
+
+#contact {
+	height: 100%;
+}
+
+.contact-content {
+	padding: 10% 0px 0px 0px;
+}
+
+.contact-content p {
+	padding: 1% 0px;
+}
+
 .active-scroll-nav {
 	background-color: rgb(194, 194, 194);
 	color: #1a1a1a;
@@ -140,10 +183,12 @@ html, body {
 
 .footer {
 	display: block;
-	height: 20%;
+	position:relative;
+	height: 22%;
 	border-top: 1px solid black;
-	margin-top: 100px;
 	width: 100%;
+	align-items: flex-end;
+	bottom: 20%;
 }
 
 .nav-icons {
